<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  xmlns:tools="http://schemas.android.com/tools">
    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_above="@+id/buttons"
    >
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/midnight"
                tools:context=".MainActivity" >

            <LinearLayout
                    android:id="@+id/ll_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/black"
            >
                <RelativeLayout
                        android:id="@+id/rl_bitcoin"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:layout_height="wrap_content">
                    <TextView
                            android:id="@+id/bitcoin"
                            style="@style/TextStyle"

                            android:layout_marginLeft="25dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bitcoin"/>
                    <TextView
                            style="@style/Small1StageLeftStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btc_usd"
                            android:layout_marginLeft="20dp"
                            android:layout_toRightOf="@+id/bitcoin"
                    />
                    <TextView
                            style="@style/TextStyle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="$ 4,781.19"
                            android:layout_marginLeft="25dp"
                            android:layout_below="@+id/bitcoin"
                    />
                </RelativeLayout>

                <View
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="match_parent"
                        android:background="@drawable/shape_black_line"
                />
                <RelativeLayout
                        android:layout_alignParentEnd="true"
                        android:layout_width="0dp"
                        android:layout_weight="1"

                        android:layout_height="wrap_content">
                    <TextView
                            android:id="@+id/cdma"
                            style="@style/Small1TextRightStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gdax"
                            android:layout_marginRight="20dp"
                            android:layout_alignParentEnd="true"
                    />
                    <TextView
                            style="@style/Title3SuccessRightStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="2,39%"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_below="@+id/cdma"
                    />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                    android:id="@+id/rl_val"
                    android:layout_below="@+id/ll_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp">
                <RelativeLayout
                        android:id="@+id/rl_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                >
                    <TextView
                            android:id="@+id/amount1"
                            style="@style/Title3TextLeftStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="$ 4,855.19"
                    />

                    <TextView
                            style="@style/Small1StageLeftStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/amount1"
                            android:text="Global Avg. "
                    />
                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/rl_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                >
                    <TextView
                            android:id="@+id/amount2"
                            style="@style/Title3TextLeftStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="$ 80.7B"
                    />
                    <TextView
                            style="@style/Small1StageLeftStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/market_cap"
                            android:layout_below="@+id/amount2"
                    />
                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/rl_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                >
                    <TextView
                            android:id="@+id/amount3"
                            style="@style/Title3TextLeftStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="$ 4,855.19"
                    />

                    <TextView
                            style="@style/Small1StageLeftStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/amount3"
                            android:text="@string/volume"
                    />
                </RelativeLayout>
            </RelativeLayout>


            <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart1"
                    android:layout_below="@+id/rl_val"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_height="200dp"

            />

            <RelativeLayout
                    android:id="@+id/rl_val1"
                    android:layout_below="@+id/chart1"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content">
                <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp">
                    <TextView
                            android:id="@+id/val1"
                            style="@style/Small1StageLeftStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/high"
                    />

                    <TextView
                            style="@style/Small1TextLeftStyle"
                            android:layout_toRightOf="@id/val1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="$ 4,925.65"
                    />


                </RelativeLayout>

                <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="20dp">
                    <TextView
                            android:id="@+id/val2"
                            style="@style/Small1StageRightStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Vol"
                            android:layout_marginRight="5dp"
                    />

                    <TextView
                            style="@style/Small1TextRightStyle"
                            android:layout_width="wrap_content"
                            android:layout_toRightOf="@+id/val2"
                            android:layout_height="wrap_content"
                            android:text="$ 55.65"
                    />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/rl_val3"
                    android:layout_below="@+id/rl_val1" android:layout_width="match_parent" android:layout_height="wrap_content">
                <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="25dp">
                    <TextView
                            android:id="@+id/val3"
                            style="@style/Small1StageLeftStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/low"
                    />
                    <TextView
                            style="@style/Small1TextLeftStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="$ 4,701.63"
                            android:layout_toRightOf="@+id/val3"
                    />
                </RelativeLayout>



                <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="20dp">
                    <TextView
                            style="@style/Small1StageRightStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/past_day"
                    />
                    <!--  <TextView
                              style="@style/Small1TextLeftStyle"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="$ 4,701.63"
                              android:layout_toRightOf="@+id/val4"
                      />-->
                </RelativeLayout>


            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@+id/rl_val3"
                    android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
    <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/midnight"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:orientation="horizontal">
        <Button android:layout_width="0dp"
                android:id="@+id/buy"
                android:layout_height="wrap_content"
                android:background="@color/green_blue"
                android:layout_marginRight="10dp"
                android:text="@string/text_buy"
                android:textColor="@color/white"
                android:layout_weight="1"/>
        <Button android:layout_width="0dp"
                android:background="@color/grapefruit"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"
                android:text="@string/text_sell"
                android:layout_weight="1"/>
        <Button android:layout_width="0dp"
                android:background="@color/dodger_blue"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"
                android:text="@string/text_watch"
                android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>