<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  xmlns:tools="http://schemas.android.com/tools">
    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_above="@+id/buttons"
    >
        <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/black"
                tools:context=".MainActivity" android:id="@+id/linearLayout">
            <RelativeLayout
                    android:id="@+id/rl_val"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp">
                <RelativeLayout
                        android:id="@+id/rl_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                >
                    <TextView
                            android:id="@+id/amount1"
                            style="@style/Subheader2TextLeftStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="545.0"
                    />
                    <TextView
                            style="@style/Small1StageLeftStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bid"
                            android:layout_below="@+id/amount1"
                    />
                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/rl_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/rl_one"
                        android:layout_marginLeft="20dp"
                >
                    <TextView
                            android:id="@+id/amount2"
                            style="@style/Subheader2TextLeftStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="546.0"
                    />


                    <TextView
                            style="@style/Small1StageLeftStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ask"
                            android:layout_below="@+id/amount2"
                    />
                </RelativeLayout>

                <RelativeLayout
                        android:id="@+id/rl_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                >

                    <TextView
                            android:id="@+id/amount3"
                            style="@style/Subheader2SuccessRightStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="+6,35%"
                            android:layout_alignParentRight="true"
                    />
                    <TextView
                            style="@style/Small1StageRightStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/changes"
                            android:layout_alignParentRight="true"
                            android:layout_below="@+id/amount3"
                    />

                    <TextView
                            android:id="@+id/value"
                            style="@style/Subheader2SuccessRightStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="+32.50"
                            android:layout_marginRight="12dp"
                            android:layout_toLeftOf="@+id/amount3"
                    />
                </RelativeLayout>
            </RelativeLayout>
            <LinearLayout
                    android:id="@+id/ll_main"
                    android:layout_width="wrap_content"
                    android:layout_below="@+id/rl_val"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/black"
                    android:layout_marginTop="25dp"
                    >
                <RelativeLayout
                        android:id="@+id/rl_bitcoin"
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:layout_height="wrap_content">
                    <TextView
                            android:id="@+id/bitcoin"
                            style="@style/TextStyle"

                            android:layout_marginLeft="25dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bitcoin"/>

                    <TextView
                            style="@style/TextStyle2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="$ 536.0"
                            android:layout_marginLeft="25dp"
                            android:layout_below="@+id/bitcoin"
                    />
                </RelativeLayout>

                <View
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="match_parent"
                        android:background="@drawable/shape_black_line"
                />
                <RelativeLayout
                        android:layout_alignParentEnd="true"
                        android:layout_width="0dp"
                        android:layout_weight="1"

                        android:layout_height="wrap_content">
                    <TextView
                            android:id="@+id/val"
                            style="@style/Small2StageRightStyle"
                            android:layout_width="wrap_content"
                            android:layout_marginRight="20dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/high_val"
                    />
                    <TextView
                            android:id="@+id/v"
                            style="@style/Small1TextRightStyle"
                            android:layout_width="wrap_content"
                            android:layout_marginRight="20dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_below="@+id/val"
                            android:text="1,097.00"
                    /><TextView
                        android:id="@+id/v2"
                        style="@style/Small2StageRightStyle"
                        android:layout_width="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/v"
                        android:layout_alignParentEnd="true"
                        android:text="@string/low_val"
                />
                    <TextView
                            style="@style/Small1TextRightStyle"
                            android:layout_width="wrap_content"
                            android:layout_marginRight="20dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_below="@+id/v2"
                            android:text="1,017.30"
                    />
                    />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                    android:id="@+id/tv"
                    style="@style/Small1StageCenterStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12/28/2017 07:40 PM "
                    android:layout_marginTop="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/ll_main"
            />
            <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/tv"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
            <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart1"
                    android:layout_below="@+id/recyclerView"
                    android:layout_width="match_parent"

                    android:layout_height="200dp"
            />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
    <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/midnight"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:orientation="horizontal">
        <Button android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/dodger_blue"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"
                android:text="@string/text_buy"
                android:layout_weight="1"/>
        <Button android:layout_width="0dp"
                android:background="@color/charcoal_grey"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/text_sell"
                android:textColor="@color/white"
                android:layout_weight="1"/>


    </LinearLayout>
</RelativeLayout>
